--- a/package.json
+++ b/package.json
@@ -1,46 +1,57 @@
 {
-  "version": "0.1.0",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
+    "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/lab": "^5.0.0-alpha.71",
+    "@mui/material": "^5.4.4",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@types/node": "^17.0.21",
+    "dotenv": "^16.0.0",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-chained-backend": "^3.0.2",
+    "i18next-http-backend": "^1.3.2",
+    "i18next-resources-to-backend": "^1.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.6",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux-remember": "^3.0.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^1.0.7",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8"
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0"
   },
   "name": "@pubcore/vite-mui-ts",
-  "description": "«scope» ... a scope/group name",
-  "main": "./dist/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/pubcore/vite-mui-ts.git"
-  },
+  "description": "scaffolding vite react mui app",
+  "main": "src/main.tsx",
   "keywords": [
     "vite",
     "react",
     "material-ui",
+    "mui",
     "TypeScript",
     "scaffolding"
   ],
@@ -49,9 +60,5 @@
   "bugs": {
     "url": "https://github.com/pubcore/vite-mui-ts/issues"
   },
-  "homepage": "https://github.com/pubcore/vite-mui-ts#readme",
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-    "**/*": "prettier --write --ignore-unknown"
-  }
+  "homepage": "https://github.com/pubcore/vite-mui-ts#readme"
 }
